package test_ilive;

enum BIG_CMD
{
	CMD_APPLE_SVR = 0x1;
};

enum SUB_CMD
{
	CMD_BUYAPPLE = 0x1;
	CMD_SELLAPPLE = 0x2;
};

message BuyAppleReq {
	optional uint32 num = 1;
};

message BuyAppleRsp {
    optional uint32 result = 1;
	optional string errmsg = 2;
};

message SellAppleReq {
	optional uint32 num = 1;
};

message SellAppleRsp {
    optional uint32 result = 1;
	optional string errmsg = 2;
};

// service test_ilive
service test_ilive {
    // buy apple
	rpc BuyApple(BuyAppleReq) returns(BuyAppleRsp);
    // sell apple
	rpc SellApple(SellAppleReq) returns(SellAppleRsp);
};
